--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,33 @@
    <link rel="stylesheet" href="tempoStyle.css">
 </head>
 <body>
-    <button id="changeColor">Click Me</button>
-    <script src="popup.js"></script>
+    <h2>Change Tempo</h2>
+    <form action="">
+        <table>
+            <tr>
+                <td>
+                    <p>Starting tempo:</p>
+                </td>
+                <td>
+                    <input type="text" name="startTempo" id="startTempo" placeholder="-">
+                </td>
+            </tr>
+            <!-- Have this notification pop up as a tool-tip! -->
+            <span>BPM auto-recognized from 'source'</span>
+            <tr>
+                <td>
+                    <p>Desired tempo:</p>
+                </td>
+                <td>
+                    <input type="text" name="startTempo" id="startTempo" placeholder="-">
+                </td>
+            </tr>
+        </table>
+        <button type="submit" id="submitChange">Change Tempo!</button>
+    </form>
+    <h5>Tempo Playback is <span>1x</span> of original speed</h5>
+    <!-- <button id="changeColor">Click Me</button> -->
+    <!-- <script src="popup.js"></script> -->
     <script src="changeYTTempo.js"></script>
 </body>
 </html>
