Completes basic UI setup. Input fields & submit button available and labeled

--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
                     </td>
                 </tr>
                 <!-- Have this notification pop up as a tool-tip! -->
-                <span>BPM auto-recognized from 'source'</span>
+                <!-- <span>BPM auto-recognized from 'source'</span> -->
                 <tr>
                     <td>
                         <p>Desired tempo:</p>
