Rearranges files for clearer naming convention. changeYTTempo.js is now standalone function

--- a/popup.html
+++ b/popup.html
@@ -33,6 +33,6 @@
         <!-- <button id="changeColor">Click Me</button> -->
         <!-- <script src="popup.js"></script> -->
     </div>
-    <script src="changeYTTempo.js"></script>
+    <script src="popup.js"></script>
 </body>
 </html>
