--- a/popup.html
+++ b/popup.html
@@ -29,7 +29,7 @@
             </table>
             <center><button type="submit" id="submitChange">Change Tempo!</button></center>
         </form>
-        <h5 id="playbackInfo">Tempo Playback is <span>1x</span> of original speed</h5>
+        <h5 id="playbackInfo" style="display: none;">Tempo Playback is <span>1</span>x of original speed</h5>
         <!-- <button id="changeColor">Click Me</button> -->
         <!-- <script src="popup.js"></script> -->
     </div>
